--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -8,14 +8,14 @@
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = false;
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
 shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
@@ -45,6 +45,7 @@ shadow-offset-y = -7;
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
+  "class_g = 'dwm'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
@@ -85,7 +86,7 @@ fade-in-step = 0.01;
 fade-out-step = 0.01;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-fade-delta = 0; 
+fade-delta = 0;
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
@@ -141,7 +142,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #     "unknown", "desktop", "dock", "toolbar", "menu", "utility",
 #     "splash", "dialog", "normal", "dropdown_menu", "popup_menu",
 #     "tooltip", "notification", "combo", and "dnd".
-opacity-rule = [ 
+opacity-rule = [
 	"90:class_g = 'st-256color'",
 	"100:class_g = 'fcitx'",
 	"100:class_g = 'jetbrains-clion'",
@@ -455,14 +456,53 @@ wintypes:
   dropdown_menu = { opacity = 0.8; }
 };
 
+#################################
+#          Animations           #
+#################################
+
+# fly-in: Windows fly in from random directions to the screen
+# maximize: Windows pop from center of the screen to their respective positions
+# minimize: Windows minimize from their position to the center of the screen
+# slide-in-center: Windows move from upper-center of the screen to their respective positions
+# slide-out-center: Windows move to the upper-center of the screen
+# slide-left: Windows are created from the right-most window position and slide leftwards
+# slide right: Windows are created from the left-most window position and slide rightwards
+# slide-down: Windows are moved from the top of the screen and slide downward
+# slide-up: Windows are moved from their position to top of the screen
+# squeeze: Windows are either closed or created to/from their center y-position (the animation is similar to a blinking eye)
+# squeeze-bottom: Similar to squeeze, but the animation starts from bottom-most y-position
+# zoom: Windows are either created or destroyed from/to their center (not the screen center)
+
+#enable or disable animations
 animations = true;
-animation-window-mass = 0.5;
-animation-dampening = 16;
-animation-stiffness-in-tag = 125;
-animation-for-open-window = "zoom";
+#change animation speed of windows in current tag e.g open window in current tag
+animation-stiffness-in-tag = 512;
+#change animation speed of windows when tag changes
+animation-stiffness-tag-change = 90.0;
+
+animation-window-mass = 7;
+animation-dampening = 70;
+animation-clamping = false;
+
+#open windows
+animation-for-open-window = "squeeze-bottom";
+#minimize or close windows
 animation-for-unmap-window = "squeeze";
+#popup windows
+animation-for-transient-window = "slide-up"; #available options: slide-up, slide-down, slide-left, slide-right, squeeze, squeeze-bottom, zoom
+
+#set animation for windows being transitioned out while changings tags
+animation-for-prev-tag = "minimize";
+#enables fading for windows being transitioned out while changings tags
+enable-fading-prev-tag = true;
+
+#set animation for windows being transitioned in while changings tags
+animation-for-next-tag = "slide-in-center";
+#enables fading for windows being transitioned in while changings tags
+enable-fading-next-tag = true;
+
 animation-exclude = [
-    "class_g = 'fcitx'",
+    "class_g *= 'fcitx'",
     "class_g = 'flameshot'",
     "class_g = 'Rofi'",
     "WM_CLASS@:s *= 'screenkey'",
